--- a/angular.json
+++ b/angular.json
@@ -7,8 +7,8 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "inlineTemplate": true,
-          "inlineStyle": true,
+          "inlineTemplate": false,
+          "inlineStyle": false,
           "skipTests": true
         },
         "@schematics/angular:class": {
@@ -51,6 +51,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -104,6 +105,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "bookstore-frontend"
+    }
+  },
+  "defaultProject": "bookstore-frontend",
+  "cli": {
+    "analytics": "d7f8b3a0-ba93-4376-a612-69e540b5e3bb"
+  }
 }
